[gd_scene load_steps=10 format=3 uid="uid://cgxhh4qhevwsg"]

[ext_resource type="Texture2D" uid="uid://y83sv0gw5evk" path="res://art/runner.png" id="1_2fgms"]
[ext_resource type="Script" path="res://code/runner.gd" id="1_tdi3o"]
[ext_resource type="Texture2D" uid="uid://cfwx4loop3xh8" path="res://art/small_circle.png" id="3_6h1jh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x5k4q"]
size = Vector2(26.8182, 49.0909)

[sub_resource type="Animation" id="Animation_sjpum"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/ShoulderL:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.27655]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/ShoulderR:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.24473]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprites/ShoulderL/HandThingy:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0397147]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprites/ShoulderR/HandThingy:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.166413]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprites/Head:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_l3o7n"]
resource_name = "walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/ShoulderL:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.27655, 1.52782, 1.27655]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/ShoulderR:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-1.24473, -1.54373, -1.24473]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprites/ShoulderL/HandThingy:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0397147, 0.308285, 0.0397147]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprites/ShoulderR/HandThingy:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.166413, -0.552876, -0.166413]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Sprites/Head:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 3.14159]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bv5pu"]
_data = {
"RESET": SubResource("Animation_sjpum"),
"walk": SubResource("Animation_l3o7n")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8fq6d"]
size = Vector2(30, 45)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qi2b3"]
size = Vector2(30, 54)

[node name="Runner" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 4
collision_mask = 4
script = ExtResource("1_tdi3o")

[node name="Sprites" type="Node2D" parent="."]
rotation = 1.5708
scale = Vector2(1.9, 1.9)

[node name="Body" type="Sprite2D" parent="Sprites"]
self_modulate = Color(0.501961, 0.545098, 0.709804, 1)
texture_filter = 1
texture = ExtResource("1_2fgms")
region_enabled = true
region_rect = Rect2(20.6892, 17.8609, 22.3617, 20.4047)

[node name="ShoulderL" type="Node2D" parent="Sprites"]
position = Vector2(-7.69231, 0)
rotation = 1.27655

[node name="ArmL" type="Sprite2D" parent="Sprites/ShoulderL"]
modulate = Color(0.411765, 0.478431, 0.666667, 1)
texture_filter = 1
position = Vector2(-6.35195, 0.719544)
rotation = -1.57811
texture = ExtResource("1_2fgms")
flip_h = true
region_enabled = true
region_rect = Rect2(20.9595, 0.216871, 10.8104, 18.1075)

[node name="HandThingy" type="Node2D" parent="Sprites/ShoulderL"]
position = Vector2(-12.3077, 0.769231)
rotation = 0.0397147

[node name="Sprite2D5" type="Sprite2D" parent="Sprites/ShoulderL/HandThingy"]
self_modulate = Color(0.533333, 0.6, 0.733333, 1)
texture_filter = 1
position = Vector2(-4.70337, -2.12262)
rotation = 1.49822
texture = ExtResource("1_2fgms")
flip_v = true
region_enabled = true
region_rect = Rect2(2.31145, 0.622263, 11.2158, 16.6211)

[node name="ShoulderR" type="Node2D" parent="Sprites"]
position = Vector2(7.69231, 0)
rotation = -1.24473

[node name="ArmR" type="Sprite2D" parent="Sprites/ShoulderR"]
modulate = Color(0.411765, 0.478431, 0.666667, 1)
texture_filter = 1
position = Vector2(6.61539, 0.769231)
rotation = 1.5708
texture = ExtResource("1_2fgms")
region_enabled = true
region_rect = Rect2(21.2297, 0.216871, 10.8104, 18.7831)

[node name="HandThingy" type="Node2D" parent="Sprites/ShoulderR"]
position = Vector2(12.7692, 0.769231)
rotation = -0.166413

[node name="Sprite2D5" type="Sprite2D" parent="Sprites/ShoulderR/HandThingy"]
self_modulate = Color(0.533333, 0.6, 0.733333, 1)
texture_filter = 1
position = Vector2(5.38461, -1.53846)
rotation = 1.79505
texture = ExtResource("1_2fgms")
region_enabled = true
region_rect = Rect2(2.31145, 0.622263, 11.2158, 16.6211)

[node name="Head" type="Sprite2D" parent="Sprites"]
self_modulate = Color(0.301961, 0.317647, 0.529412, 1)
texture_filter = 1
position = Vector2(0, -5)
scale = Vector2(1, 1)
texture = ExtResource("1_2fgms")
region_enabled = true
region_rect = Rect2(0.0142365, 18.5946, 19.3237, 18.2426)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3.74996, -1.00002)
rotation = 3.14159
scale = Vector2(1.1, 1.1)
shape = SubResource("RectangleShape2D_x5k4q")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bv5pu")
}
autoplay = "walk"

[node name="PlayerDetectors" type="Node2D" parent="."]

[node name="DetectPlayer" type="RayCast2D" parent="PlayerDetectors"]
target_position = Vector2(1300, 0)

[node name="DetectPlayer2" type="RayCast2D" parent="PlayerDetectors"]
position = Vector2(0, 39)
target_position = Vector2(1300, 0)

[node name="DetectPlayer3" type="RayCast2D" parent="PlayerDetectors"]
position = Vector2(0, -38)
target_position = Vector2(1300, 0)

[node name="HurtEffect" type="CPUParticles2D" parent="."]
emitting = false
amount = 20
lifetime = 0.7
one_shot = true
speed_scale = 1.2
explosiveness = 1.0
lifetime_randomness = 1.0
texture = ExtResource("3_6h1jh")
direction = Vector2(0, 1)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 200.0
initial_velocity_max = 300.0
scale_amount_min = 0.01
scale_amount_max = 0.05
color = Color(0.933333, 0, 0.0588235, 1)

[node name="GoldenColl" type="StaticBody2D" parent="."]
position = Vector2(9, -3)

[node name="CollisionShape2D" type="CollisionShape2D" parent="GoldenColl"]
position = Vector2(-5, 2.5)
shape = SubResource("RectangleShape2D_8fq6d")
disabled = true
debug_color = Color(0.0941176, 0.596078, 0.709804, 0.419608)

[node name="StoneColl" type="StaticBody2D" parent="."]
position = Vector2(9, -3)
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="StoneColl"]
position = Vector2(-5, 2)
shape = SubResource("RectangleShape2D_qi2b3")
debug_color = Color(0.678431, 0.301961, 1, 0.419608)

[node name="HurtSpot" type="Node2D" parent="."]
position = Vector2(38, 0)
